<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@android:color/holo_blue_light">

    <com.bassambadr.getnews.widget.CustomeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeView"
        android:text="@string/welcome_string"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:padding="5px"
        widget:Scratch="Scratch.ttf"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/welcomeView"
        android:layout_marginTop="20dp"
        android:weightSum="4">

        <com.bassambadr.getnews.widget.CustomeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/signing_string"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            widget:Scratch="Scratch.ttf"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:weightSum="4"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/usernameET"
                android:hint="@string/username_hint_string"
                android:drawableRight="@drawable/user_ic"
                android:background="@drawable/ed_bg"
                android:singleLine="true"
                android:maxLines="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/passowrdET"
                android:hint="@string/passowrd_hint_string"
                android:drawableRight="@drawable/password_ic"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/ed_bg"
                android:singleLine="true"
                android:maxLines="1"/>

            <com.bassambadr.getnews.widget.CustomButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signingBtn"
                android:text="@string/signing_btn_string"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bg"
                widget:Scratch="Scratch.ttf"/>

            <com.bassambadr.getnews.widget.CustomButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerBtn"
                android:text="@string/register_btn_string"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bg"
                widget:Scratch="Scratch.ttf"/>

        </LinearLayout>

    </LinearLayout>

    <com.bassambadr.getnews.widget.CustomeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desi_by_string"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:padding="5px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        widget:Scratch="Scratch.ttf"/>

</RelativeLayout>
